<resources>
    <string name="app_name">UserRegisteration</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_signup">SignUp</string>
    <string name="mobile">Mobile No</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="skills">Skills</string>
    <string name="btn_login">Login</string>
    <string name="welcome_user">Welcome User</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_update">Update</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
    </string-array>
</resources>